test/success/integration/_succ_expr_value_list_1.hs
main = do
       let x :: [Int]; x = [1,2,3]
       print (x !! 0)