test/fail/integration/_fail_grammar_lexpr_1.hs
main = do
       let x :: [Int]; x = [jl, 2]
       print "hello"